crates/plotnik-lib/tests/04-emit/linking/field_not_on_node.txt
Q = (function_declaration
    condition: (identifier) @name) @fn
==== diagnostics ====
error: field `condition` is not valid on this node type
 --> query.ptk:2:5
  |
1 | Q = (function_declaration
  |      -------------------- on `function_declaration`
2 |     condition: (identifier) @name) @fn
  |     ^^^^^^^^^
  |
help: valid fields for `function_declaration`: `body`, `name`, `parameters`
